# Raw-Socket-Firewall-with-Packet-Inspection

./: .gitignore  CMakeLists.txt  README.md
config/: blacklist.txt  firewall.rules  whitelist.txt
src/: firewall.cpp  firewall.h  main.cpp  packet_inspector.cpp
src/impl/: firewall.cpp  packet_inspector.cpp
src/include/: firewall.h  platform.h
web/: app.py  requirements.txt
web/static/: style.css
web/templates/: index.html
